# MakerRepo

./: README.md  pyproject.toml
.circleci/: config.yml
makerrepo/: artifacts.py
makerrepo/artifacts/: decorator.py
mr/: __init__.py  build_env.py  ci.py  constants.py  data_types.py  decorator.py  exceptions.py  registry.py  utils.py
mr/artifacts/: data_types.py  decorator.py  registry.py  utils.py
mr/cmds/: aliase.py  cli.py  main.py
mr/cmds/artifacts/: main.py
tests/: conftest.py  test_artifacts.py  test_build.py  test_cached.py  test_ci.py  test_cmd.py  test_customizables.py  test_exceptions.py  test_utils.py
tests/fixtures/: example.py
tests/fixtures/examples/: main.py
tests/fixtures/pkg_example/mypkg/: main.py
