[project]
name = "makerrepo"
version = "0.1.0"
description = "Open source library that brings Manufacturing As Code concept into build123d ecosystem"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "ocp-vscode>=3.0.1",
    "rich>=14.2.0",
    "venusian>=3.1.1",
]

[project.scripts]
mr = "mr.cmds.main:cli"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
