[project]
name = "makerrepo"
version = "0.3.5"
description = "Open source library that brings Manufacturing As Code concept into build123d ecosystem"
authors = [{ name = "Fang-Pen Lin", email = "fangpen@launchplatform.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "build123d>=0.10.0",
    "pydantic>=2.12.5",
    "PyYAML>=6.0",
    "venusian>=3.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
